<resources>
    <string name="app_name">android_test</string>
    <string name="motion_scene_1">Motion Scene 1</string>
    <string name="custom_view">Custom View</string>
    <string name="transition_string">card_transition</string>
    <string name="textview_string">Yo\nClick me to see the transition to another activity.\nYo\nClick me to see the transition to another activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_two_screen">Fragment Two Screen</string>
    <string name="fragment_one_screen">Fragment One Screen</string>
    <string name="transition">Transition</string>
    <string name="view_page">View Page</string>

    <string name="text_main">Hello from MainActivity!!</string>
    <string name="button_one_text">Button one</string>
    <string name="button_two_text">Button Two</string>
    <string name="circular_reveals">Circular Reveals</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="note">note</string>
    <string name="finger_print">Finger Print</string>
    <string name="login">Login</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="form_with_rx">Form With Rx</string>
    <string name="click_koin">click koin</string>

    <string name="buttons_welcome">Please interact with the buttons, we\'ll track your clicks!</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="see_all_logs">SEE ALL LOGS</string>
    <string name="delete_logs">Delete Logs</string>
    <string name="hilt">Hilt</string>
</resources>